2009-05-19 12:00
	* : check brightness value and only display relevent values in
	the brightness popup.
	* : Load the brightness object in idle, seems to fix the issue
	of wrong num_level sent from HAL on aspire one machine.
	* : Provides LowBattery DBus signal.
	* : Doesn't show funny estimated battery time to be fully charged
	in case of wrong value estimated.

2009-05-18 19:40
	* : Fix inactivity sleep string in the settings dialog to
	Suspend instead of suspend (same for hibernate).
	* : Change the storage type of some variables used in xfpm-debug.c
	* : some optimization for const fuctions.
	* : use G_GNUC_NORETURN in the xfpm_start and the 
	xfpm_show_version functions.

2009-05-18 18:35
	* : libxfpm/xfpm-notify Remove unused parameter to some functions.
	* : xfpm-debug.h Check if the compiler supports variadic macros.
	
2009-05-17 13:34 Ali aliov@xfce.org 
	 * : Fix a minor issue in the settings dialog

2009-05-16 19:39 Ali aliov@xfce.org 
	 * : Update po and pot file, two strings were added, sorry

2009-05-16 19:37 Ali aliov@xfce.org 
	 * : Handle wrong battery information data

2009-05-16 19:06 Ali aliov@xfce.org 
	 * : Open settings dialog when tray icon is clicked

2009-05-16 18:55 Ali aliov@xfce.org 
	 * : Reduce the settings dialog size

2009-05-16 17:00 Ali aliov@xfce.org 
	 * : Correct icons name for the settings dialog

2009-05-16 16:27 Ali aliov@xfce.org 
	 * : Change icons name so we don't conflict with gpm

2009-05-15 22:18 Ali aliov@xfce.org 
	 * : Handle system bus disconnection correctly+use no data in the tooltip when hal is not connected

2009-05-11 22:02 Ali aliov@xfce.org 
	 * : Added xfpm-debug.c with some code to debug GEnum values

2009-05-11  9:31 Ali aliov@xfce.org 
	 * : Update po Changelog for the russian translation

2009-05-11  9:30 Ali aliov@xfce.org 
	 * : Rusian translation added by Denis Koryavov

2009-05-05  0:26 Ali aliov@xfce.org 