@@ -1,3 +1,6 @@
+2009-05-19 12:30
+	* : Use GError in the get brightness method.
+
 2009-05-19 12:00
 	* : check brightness value and only display relevent values in
 	the brightness popup.
